--- a/src/PackageCard.module.scss
+++ b/src/PackageCard.module.scss
@@ -7,7 +7,6 @@
   background-color: $gray-200;
   min-height: 200px;
   border: 1px solid $gray-300;
-  overflow: hidden;
 
   flex-grow: 1;
   flex-basis: 600px;
